--- a/app/src/main/res/layout/fragment_booking_step3.xml
+++ b/app/src/main/res/layout/fragment_booking_step3.xml
@@ -55,7 +55,11 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="20dp"/>
 
-              
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
