--- a/app/src/main/res/layout/pat_request_item.xml
+++ b/app/src/main/res/layout/pat_request_item.xml
@@ -62,5 +62,14 @@
             android:textColor="@color/colorAccent"
             android:text="Online" />
 
+        <Button
+            android:id="@+id/pat_request_accept_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="298dp"
+            android:layout_marginLeft="298dp"
+            android:text="Accept" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
