--- a/app/src/main/res/layout/patient_appointments_item.xml
+++ b/app/src/main/res/layout/patient_appointments_item.xml
@@ -24,7 +24,13 @@
             android:foregroundGravity="center"
             app:srcCompat="@drawable/ic_anon_user_48dp" />
 
-      
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/rlStatus"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/patient_image">
 
             <TextView
                 android:id="@+id/patient_name"
