--- a/app/src/main/res/layout/my_patient_item.xml
+++ b/app/src/main/res/layout/my_patient_item.xml
@@ -8,7 +8,10 @@
     app:cardBackgroundColor="@color/cardview_light_background">
 
 
-   
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_margin="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
