--- a/app/src/main/res/layout/fragment_consultation.xml
+++ b/app/src/main/res/layout/fragment_consultation.xml
@@ -12,7 +12,7 @@ android:gravity="center">
         android:id="@+id/fragment_page_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        
+        android:text="@string/hello_blank_fragment"
         android:textColor="#FF0000" />
 
 </LinearLayout>
