--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tvAppName"
         android:layout_width="200dp"
         android:layout_height="200dp"
-       
+        android:src="@drawable/app_icon"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
