--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -14,7 +14,7 @@
         android:background="#22BE87"
         android:minHeight="?attr/actionBarSize"
         android:layout_alignParentTop="true"
-       
+        app:titleTextColor="#fff"
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp">
 
