S546950:updated doctor home activity xml file

--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="215dp"
         android:background="@drawable/rectangle_round"
         android:elevation="6dp"
-        
+        android:gravity="center"
         android:orientation="vertical">
 
         <RelativeLayout
